--- a/frontend/src/css/circleset.css
+++ b/frontend/src/css/circleset.css
@@ -1,33 +1,58 @@
-.circle-container {
+.wrapper {
   position: relative;
-  width: 400px;
-  height: 400px;
+}
+
+.circle-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .largest {
   border-radius: 50%;
   position: absolute;
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
   background-color: #afe2f5;
+  z-index: -1;
 }
 
 .medium {
   border-radius: 50%;
   position: absolute;
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   background-color: #65bbe0;
   top: 50px;
   left: 50px;
+  z-index: -1;
 }
 
 .smallest {
   border-radius: 50%;
   position: absolute;
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   background-color: #2e8eac;
   top: 100px;
   left: 100px;
+  z-index: -1;
+}
+
+.hero-image-container {
+  position: relative;
+  width: 70vw;
+  height: 100vh;
+}
+
+.hero-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 70%;
+  height: 70%;
+  object-fit: cover;
+  z-index: 1;
 }
