--- a/frontend/src/css/circleset.css
+++ b/frontend/src/css/circleset.css
@@ -1,5 +1,7 @@
 .wrapper {
   position: relative;
+  height: 90vh;
+  width: 60vw;
 }
 
 .circle-container {
@@ -43,16 +45,15 @@
 
 .hero-image-container {
   position: relative;
-  width: 70vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .hero-image {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 70%;
+  width: 100%;
   height: 70%;
   object-fit: cover;
   z-index: 1;
+  margin-left: 5rem;
 }
